@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,7 @@ package jdk.internal.loader;
 import java.io.IOException;
 import java.net.URL;
 import java.nio.file.InvalidPathException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.security.CodeSource;
 import java.security.PermissionCollection;
 import java.util.jar.Manifest;
@@ -54,39 +54,27 @@ public class ClassLoaders {
     private static final PlatformClassLoader PLATFORM_LOADER;
     private static final AppClassLoader APP_LOADER;
 
-    /**
-     * Creates the built-in class loaders
-     */
+    // Creates the built-in class loaders.
     static {
-
         // -Xbootclasspath/a or -javaagent with Boot-Class-Path attribute
-        URLClassPath bcp = null;
-        String s = VM.getSavedProperty("jdk.boot.class.path.append");
-        if (s != null && s.length() > 0)
-            bcp = new URLClassPath(s, true);
+        String append = VM.getSavedProperty("jdk.boot.class.path.append");
+        BOOT_LOADER =
+            new BootClassLoader((append != null && append.length() > 0)
+                ? new URLClassPath(append, true)
+                : null);
+        PLATFORM_LOADER = new PlatformClassLoader(BOOT_LOADER);
 
-        // we have a class path if -cp is specified or -m is not specified.
-        // If neither is specified then default to -cp <working directory>
-        // If -cp is not specified and -m is specified, the value of
-        // java.class.path is an empty string, then no class path.
-        String mainMid = System.getProperty("jdk.module.main");
+        // A class path is required when no initial module is specified.
+        // In this case the class path defaults to "", meaning the current
+        // working directory.  When an initial module is specified, on the
+        // contrary, we drop this historic interpretation of the empty
+        // string and instead treat it as unspecified.
         String cp = System.getProperty("java.class.path");
-        if (mainMid == null) {
-            // no main module specified so class path required
-            if (cp == null) {
-                cp = "";
-            }
-        } else {
-            // main module specified, ignore empty class path
-            if (cp != null && cp.length() == 0) {
-                cp = null;
-            }
+        if (cp == null || cp.length() == 0) {
+            String initialModuleName = System.getProperty("jdk.module.main");
+            cp = (initialModuleName == null) ? "" : null;
         }
         URLClassPath ucp = new URLClassPath(cp, false);
-
-        // create the class loaders
-        BOOT_LOADER = new BootClassLoader(bcp);
-        PLATFORM_LOADER = new PlatformClassLoader(BOOT_LOADER);
         APP_LOADER = new AppClassLoader(PLATFORM_LOADER, ucp);
     }
 
@@ -235,7 +223,7 @@ public class ClassLoaders {
             // Use an intermediate File object to construct a URI/URL without
             // authority component as URLClassPath can't handle URLs with a UNC
             // server name in the authority component.
-            return Paths.get(s).toRealPath().toFile().toURI().toURL();
+            return Path.of(s).toRealPath().toFile().toURI().toURL();
         } catch (InvalidPathException | IOException ignore) {
             // malformed path string or class path element does not exist
             return null;
