@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,7 @@
 
 /**
  * @test
- * @modules jdk.incubator.httpclient
+ * @modules java.net.http
  *          jdk.httpserver
  * @run main/othervm MultiAuthTest
  * @summary Basic Authentication test with multiple clients issuing
@@ -39,15 +39,18 @@ import com.sun.net.httpserver.HttpServer;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.PasswordAuthentication;
 import java.net.URI;
-import jdk.incubator.http.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import static java.nio.charset.StandardCharsets.US_ASCII;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.fromString;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asString;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
@@ -59,7 +62,8 @@ public class MultiAuthTest {
     static final String POST_BODY = "This is the POST body " + UUID.randomUUID();
 
     static HttpServer createServer(ExecutorService e, BasicAuthenticator sa) throws Exception {
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 10);
+        InetSocketAddress addr = new InetSocketAddress(InetAddress.getLoopbackAddress(), 0);
+        HttpServer server = HttpServer.create(addr, 10);
         Handler h = new Handler();
         HttpContext serverContext = server.createContext("/test", h);
         serverContext.setAuthenticator(sa);
@@ -93,7 +97,7 @@ public class MultiAuthTest {
         HttpClient client3 = HttpClient.newHttpClient();
 
         try {
-            URI uri = new URI("http://127.0.0.1:" + port + "/test/foo");
+            URI uri = new URI("http://localhost:" + port + "/test/foo");
             System.out.println("URI: " + uri);
 
             System.out.println("\nTesting with client #1, Authenticator #1");
@@ -173,9 +177,12 @@ public class MultiAuthTest {
 
         HttpResponse resp;
         try {
-            resp = client.send(req, asString());
+            resp = client.send(req, BodyHandlers.ofString());
             ok = resp.statusCode() == 200 &&
                 resp.body().equals(RESPONSE);
+            if (resp.statusCode() == 401 || resp.statusCode() == 407) {
+                throw new IOException(String.valueOf(resp));
+            }
             if (expectFailure != null) {
                 throw new RuntimeException("Expected " + expectFailure.getName()
                          +" not raised");
@@ -195,7 +202,7 @@ public class MultiAuthTest {
                  + " count=" + ca.count.get() + " (expected=" + expectCount+")");
 
         // repeat same request, should succeed but no additional authenticator calls
-        resp = client.send(req, asString());
+        resp = client.send(req, BodyHandlers.ofString());
         ok = resp.statusCode() == 200 &&
                 resp.body().equals(RESPONSE);
 
@@ -205,9 +212,9 @@ public class MultiAuthTest {
 
         // try a POST
         req = HttpRequest.newBuilder(uri)
-                         .POST(fromString(POST_BODY))
+                         .POST(BodyPublishers.ofString(POST_BODY))
                          .build();
-        resp = client.send(req, asString());
+        resp = client.send(req, BodyHandlers.ofString());
         ok = resp.statusCode() == 200;
 
         if (!ok || ca.count.get() != expectCount)
