@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,26 +28,27 @@
  * @library /lib/testlibrary http2/server
  * @build jdk.testlibrary.SimpleSSLContext
  * @modules java.base/sun.net.www.http
- *          jdk.incubator.httpclient/jdk.incubator.http.internal.common
- *          jdk.incubator.httpclient/jdk.incubator.http.internal.frame
- *          jdk.incubator.httpclient/jdk.incubator.http.internal.hpack
- * @run testng/othervm -Djdk.internal.httpclient.debug=true -Djdk.httpclient.HttpClient.log=all NoBodyPartOne
+ *          java.net.http/jdk.internal.net.http.common
+ *          java.net.http/jdk.internal.net.http.frame
+ *          java.net.http/jdk.internal.net.http.hpack
+ * @run testng/othervm
+ *      -Djdk.internal.httpclient.debug=true
+ *      -Djdk.httpclient.HttpClient.log=all
+ *      NoBodyPartOne
  */
 
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
-import jdk.incubator.http.HttpResponse.BodyHandler;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandler;
+import java.net.http.HttpResponse.BodyHandlers;
 import org.testng.annotations.Test;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.fromString;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asByteArray;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asFile;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asString;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 
@@ -62,9 +63,10 @@ public class NoBodyPartOne extends AbstractNoBody {
                 client = newHttpClient();
 
             HttpRequest req = HttpRequest.newBuilder(URI.create(uri))
-                                         .PUT(fromString(SIMPLE_STRING))
+                                         .PUT(BodyPublishers.ofString(SIMPLE_STRING))
                                          .build();
-            BodyHandler<String> handler = i % 2 == 0 ? asString() : asString(UTF_8);
+            BodyHandler<String> handler = i % 2 == 0 ? BodyHandlers.ofString()
+                                                     : BodyHandlers.ofString(UTF_8);
             HttpResponse<String> response = client.send(req, handler);
             String body = response.body();
             assertEquals(body, "");
@@ -82,10 +84,10 @@ public class NoBodyPartOne extends AbstractNoBody {
                 client = newHttpClient();
 
             HttpRequest req = HttpRequest.newBuilder(URI.create(uri))
-                                         .PUT(fromString(SIMPLE_STRING))
+                                         .PUT(BodyPublishers.ofString(SIMPLE_STRING))
                                          .build();
             Path p = Paths.get("NoBody_testAsFile.txt");
-            HttpResponse<Path> response = client.send(req, asFile(p));
+            HttpResponse<Path> response = client.send(req, BodyHandlers.ofFile(p));
             Path bodyPath = response.body();
             assertTrue(Files.exists(bodyPath));
             assertEquals(Files.size(bodyPath), 0);
@@ -103,9 +105,9 @@ public class NoBodyPartOne extends AbstractNoBody {
                 client = newHttpClient();
 
             HttpRequest req = HttpRequest.newBuilder(URI.create(uri))
-                                         .PUT(fromString(SIMPLE_STRING))
+                                         .PUT(BodyPublishers.ofString(SIMPLE_STRING))
                                          .build();
-            HttpResponse<byte[]> response = client.send(req, asByteArray());
+            HttpResponse<byte[]> response = client.send(req, BodyHandlers.ofByteArray());
             byte[] body = response.body();
             assertEquals(body.length, 0);
         }
