@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,9 @@
 /*
  * @test
  * @bug 8175814
- * @modules jdk.incubator.httpclient java.logging jdk.httpserver
+ * @modules java.net.http java.logging jdk.httpserver
+ * @library /lib/testlibrary/ /
+ * @build ProxyServer
  * @run main/othervm -Djdk.httpclient.HttpClient.log=errors,requests,headers,trace VersionTest
  */
 
@@ -35,26 +37,26 @@ import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.net.InetAddress;
 import java.net.URI;
+import java.net.InetSocketAddress;
+import java.net.ProxySelector;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ExecutorService;
-import java.net.InetSocketAddress;
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.fromString;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asString;
-import static jdk.incubator.http.HttpResponse.BodyHandler.discard;
-import static jdk.incubator.http.HttpClient.Version.HTTP_1_1;
-import static jdk.incubator.http.HttpClient.Version.HTTP_2;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+import static java.net.http.HttpClient.Version.HTTP_1_1;
+import static java.net.http.HttpClient.Version.HTTP_2;
 
-/**
- */
 public class VersionTest {
     static HttpServer s1 ;
+    static ProxyServer proxy;
     static ExecutorService executor;
     static int port;
-    static HttpClient client;
+    static InetSocketAddress proxyAddr;
+    static HttpClient client, clientWithProxy;
     static URI uri;
     static volatile boolean error = false;
 
@@ -64,13 +66,20 @@ public class VersionTest {
         client = HttpClient.newBuilder()
                            .executor(executor)
                            .build();
+
+        clientWithProxy = HttpClient.newBuilder()
+                           .executor(executor)
+                           .proxy(ProxySelector.of(proxyAddr))
+                           .build();
+
         // first check that the version is HTTP/2
         if (client.version() != HttpClient.Version.HTTP_2) {
             throw new RuntimeException("Default version not HTTP_2");
         }
         try {
-            test(HTTP_1_1);
-            test(HTTP_2);
+            test(HTTP_1_1, false);
+            test(HTTP_2, false);
+            test(HTTP_2, true);
         } finally {
             s1.stop(0);
             executor.shutdownNow();
@@ -79,12 +88,13 @@ public class VersionTest {
             throw new RuntimeException();
     }
 
-    public static void test(HttpClient.Version version) throws Exception {
+    public static void test(HttpClient.Version version, boolean proxy) throws Exception {
         HttpRequest r = HttpRequest.newBuilder(uri)
                 .version(version)
                 .GET()
                 .build();
-        HttpResponse<Void> resp = client.send(r, discard(null));
+        HttpClient c = proxy ? clientWithProxy : client;
+        HttpResponse<Void> resp = c.send(r, BodyHandlers.discarding());
         System.out.printf("Client: response is %d\n", resp.statusCode());
         if (resp.version() != HTTP_1_1) {
             throw new RuntimeException();
@@ -93,7 +103,7 @@ public class VersionTest {
     }
 
     static void initServer() throws Exception {
-        InetSocketAddress addr = new InetSocketAddress (0);
+        InetSocketAddress addr = new InetSocketAddress(InetAddress.getLoopbackAddress(), 0);
         s1 = HttpServer.create (addr, 0);
         HttpHandler h = new Handler();
 
@@ -104,36 +114,40 @@ public class VersionTest {
         s1.start();
 
         port = s1.getAddress().getPort();
-        uri = new URI("http://127.0.0.1:" + Integer.toString(port) + "/foo");
+        uri = new URI("http://localhost:" + Integer.toString(port) + "/foo");
         System.out.println("HTTP server port = " + port);
-    }
-}
-
-class Handler implements HttpHandler {
-    int counter = 0;
-
-    void checkHeader(Headers h) {
-        counter++;
-        if (counter == 1 && h.containsKey("Upgrade")) {
-            VersionTest.error = true;
-        }
-        if (counter > 1 && !h.containsKey("Upgrade")) {
-            VersionTest.error = true;
-        }
+        proxy = new ProxyServer(0, false);
+        int proxyPort = proxy.getPort();
+        proxyAddr = new InetSocketAddress(InetAddress.getLoopbackAddress(), proxyPort);
     }
 
-    @Override
-    public synchronized void handle(HttpExchange t)
-        throws IOException
-    {
-        String reply = "Hello world";
-        int len = reply.length();
-        Headers h = t.getRequestHeaders();
-        checkHeader(h);
-        System.out.printf("Sending response 200\n");
-        t.sendResponseHeaders(200, len);
-        OutputStream o = t.getResponseBody();
-        o.write(reply.getBytes());
-        t.close();
+    static class Handler implements HttpHandler {
+        int counter;
+
+        void checkHeader(Headers h) {
+            counter++;
+            if (counter == 1 && h.containsKey("Upgrade")) {
+                VersionTest.error = true;
+            }
+            if (counter == 2 && !h.containsKey("Upgrade")) {
+                VersionTest.error = true;
+            }
+            if (counter == 3 && h.containsKey("Upgrade")) {
+                VersionTest.error = true;
+            }
+        }
+
+        @Override
+        public synchronized void handle(HttpExchange t) throws IOException {
+            String reply = "Hello world";
+            int len = reply.length();
+            Headers h = t.getRequestHeaders();
+            checkHeader(h);
+            System.out.printf("Sending response 200\n");
+            t.sendResponseHeaders(200, len);
+            OutputStream o = t.getResponseBody();
+            o.write(reply.getBytes());
+            t.close();
+        }
     }
 }
